--- a/Lunch_outside.ipynb
+++ b/Lunch_outside.ipynb
@@ -75,21 +75,21 @@
         "    # init p1 plays first\n",
         "    self.playerSymbol = 1\n",
         "\n",
-        "  def cantmove(self):\n",
+        "  def cantmove(self): # 더 이상 움직일 수 없을 때 남은 곳을 상대 말로 채운다.\n",
         "    for i in range(BOARD_ROWS):\n",
         "      for j in range(BOARD_COLS):\n",
         "        if self.board[i, j] == 0:\n",
         "          self.board[i, j] = -self.playerSymbol\n",
         "    return None\n",
         "\n",
-        "  def winner(self):\n",
+        "  def winner(self): # 맵이 다 찼다면 점수를 반환한다.\n",
         "    if sum(map(sum, map(abs, self.board))) == BOARD_ROWS*BOARD_COLS:\n",
         "      self.isEnd = True\n",
         "      return sum(map(sum, self.board))\n",
         "    self.isEnd = False\n",
         "    return None\n",
         "\n",
-        "  def availableActions(self):\n",
+        "  def availableActions(self): # 가능한 행동들을 반환한다.\n",
         "    Actions = []\n",
         "    for i in range(BOARD_ROWS):\n",
         "        for j in range(BOARD_COLS):\n",
@@ -108,36 +108,45 @@
         "                          Actions.append(act)\n",
         "    return Actions\n",
         "\n",
-        "    def updateState(self, Action):\n",
-        "        position = []\n",
+        "\n",
+        "  def isAvailabeAction(self, Action): # 가능한 행동인지?\n",
+        "    position = []\n",
         "        for i in range(4):\n",
         "          position[3-i] = Action % BOARD_COLS\n",
         "          Action /= BOARD_COLS\n",
-        "        ii = position[2] - position[0]\n",
-        "        jj = position[3] - position[1]\n",
-        "        if max(abs(ii), abs(jj)) == 2:\n",
-        "            self.board[position[0:2]] = 0\n",
-        "        \n",
-        "        dx1 = [-1, -1, -1, 0, 0, 1, 1, 1]\n",
-        "        dy1 = [-1, 0, 1, -1, 1, -1, 0, 1]\n",
-        "        i, j = position[2:4]\n",
-        "        self.board[i, j] = self.playerSymbol\n",
-        "        for ii, jj in zip(dx1, dy1):\n",
-        "            if i + ii < 0 or i + ii >= BOARD_ROWS or j + jj < 0 or j + jj >= BOARD_COLS:\n",
-        "                continue\n",
-        "            if self.board[i + ii, j + jj] == -self.playerSymbol:\n",
-        "                self.board[i + ii, j + jj] = self.playerSymbol\n",
-        "            \n",
-        "        # switch to another player\n",
-        "        self.playerSymbol = -1 if self.playerSymbol == 1 else 1\n",
+        "    return self.board[position[0],position[1]]==self.playerSymbol and self.board[position[2],position[3]]==0\n",
         "\n",
-        "    def giveReward(self):\n",
+        "\n",
+        "  def updateState(self, Action): # 현재 상태에서 특정 행동을 한 다음 상태로 업데이트 한다.\n",
+        "      position = []\n",
+        "      for i in range(4):\n",
+        "        position[3-i] = Action % BOARD_COLS\n",
+        "        Action /= BOARD_COLS\n",
+        "      ii = position[2] - position[0]\n",
+        "      jj = position[3] - position[1]\n",
+        "      if max(abs(ii), abs(jj)) == 2:\n",
+        "          self.board[position[0:2]] = 0\n",
+        "      \n",
+        "      dx1 = [-1, -1, -1, 0, 0, 1, 1, 1]\n",
+        "      dy1 = [-1, 0, 1, -1, 1, -1, 0, 1]\n",
+        "      i, j = position[2:4]\n",
+        "      self.board[i, j] = self.playerSymbol\n",
+        "      for ii, jj in zip(dx1, dy1):\n",
+        "          if i + ii < 0 or i + ii >= BOARD_ROWS or j + jj < 0 or j + jj >= BOARD_COLS:\n",
+        "              continue\n",
+        "          if self.board[i + ii, j + jj] == -self.playerSymbol:\n",
+        "              self.board[i + ii, j + jj] = self.playerSymbol\n",
+        "          \n",
+        "      # switch to another player\n",
+        "      self.playerSymbol = -1 if self.playerSymbol == 1 else 1\n",
+        "\n",
+        "    def giveReward(self): # 보상을 준다.\n",
         "        result = self.winner()\n",
         "        # backpropagate reward\n",
         "        self.p1.feedReward(result)\n",
         "        self.p2.feedReward(-result)\n",
         "\n",
-        "    def reset(self):\n",
+        "    def reset(self): # 리셋.\n",
         "        self.board = np.zeros((BOARD_ROWS, BOARD_COLS))\n",
         "        self.board[0, 0] = self.board[BOARD_ROWS-1, BOARD_COLS-1] = 1\n",
         "        self.board[BOARD_ROWS-1, 0] = self.board[0, BOARD_COLS-1] = -1\n",
@@ -182,7 +191,7 @@
         "    \n",
         "\n",
         "\n",
-        "  def build_model(self):\n",
+        "  def build_model(self): # DQN 모델을 생성한다.\n",
         "    model = Sequential()\n",
         "    model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(7, 7), activation='relu'))\n",
         "    model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(5, 5), activation='relu'))\n",
@@ -193,10 +202,10 @@
         "    model.compile(loss='mse', optimizer=Adam(lr=self.learning_rate))\n",
         "    return model\n",
         "\n",
-        "  def update_replay_memory(self, current_state, action, reward, next_state, done):\n",
+        "  def update_replay_memory(self, current_state, action, reward, next_state, done): # 리플레이 메모리에 상황을 저장한다.\n",
         "    self.replay_memory.append((current_state, action, reward, next_state, done))\n",
         "\n",
-        "  def get_q_values(self, x):\n",
+        "  def get_q_values(self, x): # 현재 상태에서 할 행동들의 q_value를 반환, x는 board에 대응됨.\n",
         "    return self.model.predict(x)\n",
         "\n",
         "  def getAction(self, state):\n",
@@ -210,7 +219,7 @@
         "      return np.argmax(q_values[0])\n",
         "\n",
         "  def train(self):\n",
-        "    if len(self.replay_memory)<self.min_replay_memory_size:\n",
+        "    if len(self.replay_memory)<self.min_replay_memory_size: # 충분히 모이지 않으면 학습하지 않는다.\n",
         "      return\n",
         "    \n",
         "    samples = random.sample(self.replay_memory, self.batch_size)\n",
@@ -230,7 +239,7 @@
         "    loss = hist.history['loss'][0]\n",
         "    return loss\n",
         "\n",
-        "  def increase_target_update_counter(self):\n",
+        "  def increase_target_update_counter(self): # target_model에 model을 업데이트한다. 그걸 세는 함수.\n",
         "    self.target_update_counter += 1\n",
         "    if self.target_update_counter >= self.target_update_freq:\n",
         "      self.target_model.set_weights(self.model.get_weights())\n",
