--- a/Lunch_outside.ipynb
+++ b/Lunch_outside.ipynb
@@ -140,19 +140,88 @@
         "      # switch to another player\n",
         "      self.playerSymbol = -1 if self.playerSymbol == 1 else 1\n",
         "\n",
-        "    def giveReward(self): # 보상을 준다.\n",
-        "        result = self.winner()\n",
-        "        # backpropagate reward\n",
-        "        self.p1.feedReward(result)\n",
-        "        self.p2.feedReward(-result)\n",
+        "  def giveReward(self): # 보상을 준다.\n",
+        "      result = self.winner()\n",
+        "      # backpropagate reward\n",
+        "      self.p1.feedReward(result)\n",
+        "      self.p2.feedReward(-result)\n",
         "\n",
-        "    def reset(self): # 리셋.\n",
-        "        self.board = np.zeros((BOARD_ROWS, BOARD_COLS))\n",
-        "        self.board[0, 0] = self.board[BOARD_ROWS-1, BOARD_COLS-1] = 1\n",
-        "        self.board[BOARD_ROWS-1, 0] = self.board[0, BOARD_COLS-1] = -1\n",
-        "        self.boardHash = None\n",
-        "        self.isEnd = False\n",
-        "        self.playerSymbol = 1\n",
+        "  def reset(self): # 리셋.\n",
+        "      self.board = np.zeros((BOARD_ROWS, BOARD_COLS))\n",
+        "      self.board[0, 0] = self.board[BOARD_ROWS-1, BOARD_COLS-1] = 1\n",
+        "      self.board[BOARD_ROWS-1, 0] = self.board[0, BOARD_COLS-1] = -1\n",
+        "      self.boardHash = None\n",
+        "      self.isEnd = False\n",
+        "      self.playerSymbol = 1\n",
+        "  def test(self):\n",
+        "    while not self.isEnd:\n",
+        "      avac = availableActions()\n",
+        "      if not avac:\n",
+        "        self.cantmove()\n",
+        "      else:\n",
+        "        state = self.board\n",
+        "        state = np.float32(state)\n",
+        "        q_vals = self.p1.model.predict(state)\n",
+        "        opt_action = 0\n",
+        "        for action in self.availableActions:\n",
+        "          if opt_action == 0:\n",
+        "            opt_action = action\n",
+        "          elif q_vals[opt_action]<q_vals[action]:\n",
+        "            opt_action = action\n",
+        "        self.updateState(opt_action)\n",
+        "      self.showBoard()\n",
+        "      win = self.winner()\n",
+        "      if win is not None:\n",
+        "        if win > 0:\n",
+        "          print(self.p1.name, \"wins!\")\n",
+        "        else:\n",
+        "          print(self.p2.name, \"wins!\")\n",
+        "        self.reset()\n",
+        "        break\n",
+        "      \n",
+        "      else:\n",
+        "        avac = availableActions()\n",
+        "        if not avac:\n",
+        "          self.cantmove()\n",
+        "        else:\n",
+        "          state = self.board\n",
+        "          state = np.float32(state)\n",
+        "          q_vals = self.p2.model.predict(state)\n",
+        "          opt_action == 0\n",
+        "          for action in self.availableActions:\n",
+        "            if opt_action == 0:\n",
+        "              opt_action = action\n",
+        "            elif q_vals[opt_action]<q_vals[action]:\n",
+        "              opt_action = action\n",
+        "          self.updateState(opt_action)\n",
+        "        self.showBoard()\n",
+        "        win = self.winner()\n",
+        "        if win is not None:\n",
+        "          if win > 0:\n",
+        "            print(self.p2.name, \"wins!\")\n",
+        "          else:\n",
+        "            print(self.p1.name, \"wins!\")\n",
+        "          print()\n",
+        "          self.reset()\n",
+        "          break\n",
+        "        \n",
+        "  def showBoard(self):\n",
+        "    # p1: o  p2: x\n",
+        "        for i in range(0, BOARD_ROWS):\n",
+        "            print('------------------------------')\n",
+        "            out = '| '\n",
+        "            for j in range(0, BOARD_COLS):\n",
+        "                if self.board[i, j] == 1:\n",
+        "                    token = 'o'\n",
+        "                if self.board[i, j] == -1:\n",
+        "                    token = 'x'\n",
+        "                if self.board[i, j] == 0:\n",
+        "                    token = ' '\n",
+        "                out += token + ' | '\n",
+        "            print(out)\n",
+        "        print('------------------------------')  \n",
+        "\n",
+        "\n",
         "\n",
         "    "
       ],
@@ -164,11 +233,7 @@
       "metadata": {
         "id": "-ksa-VSTmN-M",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "outputId": "d4855980-0d3c-47d9-8072-81a5f3d9a6e0"
+        "colab": {}
       },
       "source": [
         "class Player:\n",
@@ -208,8 +273,8 @@
         "  def get_q_values(self, x): # 현재 상태에서 할 행동들의 q_value를 반환, x는 board에 대응됨.\n",
         "    return self.model.predict(x)\n",
         "\n",
-        "  def getAction(self, state):\n",
-        "    if np.random.rand() <= self.epsilon:\n",
+        "  def getAction(self, state, epsilon):\n",
+        "    if np.random.rand() <= epsilon:\n",
         "       # 무작위 행동 반환\n",
         "      return random.randrange(self.action_size)\n",
         "    else:\n",
@@ -254,16 +319,7 @@
         "    self.target_model = keras.models.load_model(target_model_filepath)\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-3a460073e21f>\"\u001b[0;36m, line \u001b[0;32m39\u001b[0m\n\u001b[0;31m    if np.random.rand() <= self.epsilon\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -275,7 +331,8 @@
       "source": [
         "if __name__ ==\" __main__\":\n",
         "  agent = Player()\n",
-        "  agent.build_model()"
+        "  agent.build_model()\n",
+        "  "
       ],
       "execution_count": null,
       "outputs": []
