--- a/Charm_Cracker.ipynb
+++ b/Charm_Cracker.ipynb
@@ -19,6 +19,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Flatten\n",
     "from keras.layers.convolutional import Conv2D\n",
+    "from keras.layers import LeakyReLU\n",
     "from keras.layers import Dense\n",
     "from keras.layers import Dropout\n",
     "from keras.optimizers import Adam\n",
@@ -214,14 +215,18 @@
     "\n",
     "    def build_model(self): # DQN 모델을 생성한다.\n",
     "        model = Sequential()\n",
-    "        model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(7, 7, 1), activation='relu', dtype='float32'))\n",
+    "        model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(7, 7, 1), dtype='float32'))\n",
+    "        model.add(LeakyReLU(0.3))\n",
     "        model.add(Dropout(0.1))\n",
-    "        model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(5, 5, 1), activation='relu', dtype='float32'))\n",
+    "        model.add(Conv2D(16, (3, 3), padding = 'valid', input_shape=(5, 5, 1), dtype='float32'))\n",
+    "        model.add(LeakyReLU(0.3))\n",
     "        model.add(Dropout(0.1))\n",
     "        model.add(Flatten())\n",
-    "        model.add(Dense(64 * BOARD_COLS * BOARD_COLS, activation='relu', dtype='float32'))\n",
+    "        model.add(Dense(64 * BOARD_COLS * BOARD_COLS, dtype='float32'))\n",
+    "        model.add(LeakyReLU(0.3))\n",
     "        model.add(Dropout(0.1))\n",
-    "        model.add(Dense(BOARD_COLS**4, activation='relu', dtype='float32'))\n",
+    "        model.add(Dense(BOARD_COLS**4, dtype='float32'))\n",
+    "        model.add(LeakyReLU(0.3))\n",
     "        model.add(Reshape((BOARD_ROWS**4,), dtype='float32'))\n",
     "        model.compile(loss='mse', optimizer=Adam(lr=self.alpha))\n",
     "        return model\n",
